--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>ようこそ</h1>
     <p>This is my personal github page currently in development.</p>
     <p>これは個人的のGitHubページです。今開発中です。</p>
+    <h2>Simple Shooter Game From Algorithms Book</h2>
+    <a href="stg.html">Click Me</a>
   </body>
 </html>
