--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <h1>ようこそ</h1>
     <p>This is my personal github page currently in development.</p>
     <p>これは個人的のGitHubページです。今開発中です。</p>
-    <h2>Simple Shooter Game From Algorithms Book</h2>
-    <a href="stg.html">Click Me</a>
+    <h2>アルゴリズム本から簡単なシューチングゲーム</h2>
+    <h3>Simple Side Scroll Shooting Game from Algorithms Book</h3>
+    <img src="image/shootingss.png" alt="" width="400" height="200" />
+    <a href="stg.html">Click Me to Play!</a>
+    <h2>アルゴリズム本から簡単なパズルゲーム</h2>
+    <h3>Simple Puzzle Game from Algorithms Book</h3>
+    <img src="image/pzlss.png" alt="" width="250" height="400" />
+    <a href="pzl.html">Click Me to Play!</a>
   </body>
 </html>
