--- a/index.html
+++ b/index.html
@@ -4,20 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/base.css" />
     <title>DillonJGD</title>
   </head>
   <body>
     <h1>Welcome!</h1>
     <h1>ようこそ</h1>
-    <p>This is my personal github page currently in development.</p>
-    <p>これは個人的のGitHubページです。今開発中です。</p>
+    <p>
+      This is my personal github page currently in development. Below are games
+      from an algorithms book, I plan to upload my own work after I finish the
+      book.
+    </p>
+    <p>
+      これは個人的のGitHubページです。今開発中です。下はアルゴリズム本からゲームです。
+      この本読み終えた後で自分の作ったゲームをアップロドするつもりです。
+    </p>
+
     <h2>アルゴリズム本から簡単なシューチングゲーム</h2>
     <h3>Simple Side Scroll Shooting Game from Algorithms Book</h3>
-    <img src="image/shootingss.png" alt="" width="400" height="200" />
+    <img
+      src="image/shootingss.png"
+      alt="Shooting Game Screenshot"
+      width="400"
+      height="200"
+    />
+    <br />
     <a href="stg.html">Click Me to Play!</a>
     <h2>アルゴリズム本から簡単なパズルゲーム</h2>
     <h3>Simple Puzzle Game from Algorithms Book</h3>
-    <img src="image/pzlss.png" alt="" width="250" height="400" />
+    <img
+      src="image/pzlss.png"
+      alt="Puzzle Game Screen Shot"
+      width="250"
+      height="400"
+    />
+    <br />
     <a href="pzl.html">Click Me to Play!</a>
+    <h2>アルゴリズム本からボールアクション風ゲーム</h2>
+    <h3>Simple Ball Action Game from Algorithms Book</h3>
+    <img
+      src="image/ballss.png"
+      alt="Ball Game Screenshot"
+      width="400"
+      height="200"
+    />
+    <br />
+    <a href="ball.html">Click Me to Play!</a>
   </body>
 </html>
