--- a/index.html
+++ b/index.html
@@ -8,47 +8,59 @@
     <title>DillonJGD</title>
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <h1>ようこそ</h1>
-    <p>
-      This is my personal github page currently in development. Below are games
-      from an algorithms book, I plan to upload my own work after I finish the
-      book.
-    </p>
-    <p>
-      これは個人的のGitHubページです。今開発中です。下はアルゴリズム本からゲームです。
-      この本読み終えた後で自分の作ったゲームをアップロドするつもりです。
-    </p>
+    <div>
+      <h1>Welcome!</h1>
+      <h1>ようこそ</h1>
+      <p>
+        This is my personal github page currently in development. Below are
+        games from an algorithms book, I plan to upload my own work after I
+        finish the book.
+      </p>
+      <p>
+        これは個人的のGitHubページです。今開発中です。下はアルゴリズム本からゲームです。
+        この本読み終えた後で自分の作ったゲームをアップロドするつもりです。
+      </p>
+    </div>
 
-    <h2>アルゴリズム本から簡単なシューチングゲーム</h2>
-    <h3>Simple Side Scroll Shooting Game from Algorithms Book</h3>
-    <img
-      src="image/shootingss.png"
-      alt="Shooting Game Screenshot"
-      width="400"
-      height="200"
-    />
-    <br />
-    <a href="stg.html">Click Me to Play!</a>
-    <h2>アルゴリズム本から簡単なパズルゲーム</h2>
-    <h3>Simple Puzzle Game from Algorithms Book</h3>
-    <img
-      src="image/pzlss.png"
-      alt="Puzzle Game Screen Shot"
-      width="250"
-      height="400"
-    />
-    <br />
-    <a href="pzl.html">Click Me to Play!</a>
+    <div>
+      <h2>アルゴリズム本から簡単なシューチングゲーム</h2>
+      <h3>Simple Side Scroll Shooting Game from Algorithms Book</h3>
+      <img
+        src="image/shootingss.png"
+        alt="Shooting Game Screenshot"
+        width="400"
+        height="200"
+      />
+      <br />
+      <a href="stg.html">Click Me to Play!</a>
+    </div>
+
+    <div>
+      <h2>アルゴリズム本から簡単なパズルゲーム</h2>
+      <h3>Simple Puzzle Game from Algorithms Book</h3>
+      <img
+        src="image/pzlss.png"
+        alt="Puzzle Game Screen Shot"
+        width="250"
+        height="400"
+      />
+      <br />
+      <a href="pzl.html">Click Me to Play!</a>
+    </div>
     <h2>アルゴリズム本からボールアクション風ゲーム</h2>
-    <h3>Simple Ball Action Game from Algorithms Book</h3>
-    <img
-      src="image/ballss.png"
-      alt="Ball Game Screenshot"
-      width="400"
-      height="200"
-    />
-    <br />
-    <a href="ball.html">Click Me to Play!</a>
+
+    <div>
+      <h3>Simple Ball Action Game from Algorithms Book</h3>
+      <img
+        src="image/ballss.png"
+        alt="Ball Game Screenshot"
+        width="400"
+        height="200"
+      />
+      <br />
+      <a href="ball.html">Click Me to Play!</a>
+    </div>
+
+    <footer><small>&copy; DillonJGD 2023</small></footer>
   </body>
 </html>
